--- a/demo-courier/src/app/app.component.html
+++ b/demo-courier/src/app/app.component.html
@@ -274,41 +274,47 @@
                         <input class="col" type="text" pInputText placeholder="Número + Peso [kg]">
                     </div>
 
-                    <span class="grid col-12 md:col-6 pr-0 pb-0 mb-0">
+                    <span class="grid col-12 md:col-6 pr-0  pb-0 mb-0">
 
                             <!--Largo-->
                         <div class="col-12 md:col-5 flex">
                             <span class="col-5 text-700">Largo
                             </span>
-                            <input class="col" type="text" pInputText placeholder="Medida [cm]">
+                            <input class="col" type="text" pInputText placeholder="M.[cm]" pTooltip="Medida">
                         </div>
 
                         <!--Ancho-->
                         <div class="col-12 md:col-5 flex">
                             <span class="col-5 text-700">Ancho
                             </span>
-                            <input class="col" type="text" pInputText placeholder="Medida [cm]">
+                            <input class="col" type="text" pInputText placeholder="M.[cm]" pTooltip="Medida">
                         </div>
 
                         <!--Alto-->
                         <div class="col-12 md:col-5 flex">
                             <span class="col-5 text-700">Alto
                             </span>
-                            <input class="col" type="text" pInputText placeholder="Medida [cm]">
+                            <input class="col" type="text" pInputText placeholder="M.[cm]" pTooltip="Medida">
                         </div>
 
                         <!--Peso-->
                         <div class="col-12 md:col-5 flex">
                             <span class="col-5 text-700">Peso Vol.</span>
-                            <input class="col" type="text" pInputText placeholder="Peso [kg]">
+                            <input class="col" type="text" pInputText placeholder="P.[kg]" pTooltip="Peso">
                         </div>
 
                     </span>
 
-                    <div class="field col-12 md:col-6 pt-0">
-                        <img class="h-5rem" src="../../../../../../../assets/img/caja2.png">
-                        <img class="h-5rem" src="../../../../../../../assets/img/caja1.jpg">
-                        <img class="h-5rem" src="../../../../../../../assets/img/caja1.jpg">
+                    <div class="field col-12 md:col-6 pt-3 flex ml-0 relative position-icon">
+                        <img class="h-6rem px-2 col-12 md:col-3" src="../../../../../../../assets/img/caja2.png">
+                        <span class="grid field h-6rem col-12 md:col-3">
+                            <span>Xxx[Cm]</span>
+                            <span>Yyy[Cm]</span>
+                            <span>Zzz[Cm]</span>
+                            <span>Guia# abcd</span>
+                        </span>
+                        <img class="h-6rem px-2 col-12 md:col-3" src="../../../../../../../assets/img/caja1.png">
+                        <img class="h-6rem px-2 col-12 md:col-3" src="../../../../../../../assets/img/caja1.png">
                     </div>
 
                     <!--Descripción-->
