--- a/demo-courier/src/app/app.component.css
+++ b/demo-courier/src/app/app.component.css
@@ -1,8 +1,3 @@
-:host ::ng-deep {
-    .p-card {
-        padding-left: 0px;
-    }
-}
 .ruta-main > span {
     padding-right: 50px;
 }
@@ -16,4 +11,8 @@
 
 .ruta-child > p-calendar {
    width: 190px;
+}
+
+.position-icon {
+    right: 58px;
 }
