--- a/demo-courier/src/styles.css
+++ b/demo-courier/src/styles.css
@@ -117,7 +117,7 @@ input {
     color: white !important;
 }
 
-.p-element:not(input) {
+.p-element:not(input, button) {
     background-color: transparent !important;
     border: 1px #E5E9F2 !important;
 }
@@ -159,5 +159,47 @@ body {
     margin: 0px !important;
     padding: 0px !important;
 }
+
+// Buttons
+
+.b-primary {
+    background-color: var(--primary-color) !important;
+    border-radius: 100px;
+}
+
+.b-transparent {
+    background-color: transparent !important;
+    color: #000000 !important;
+    border: 2px solid !important;
+    border-radius: 100px;
+}
+
+.b-secondary {
+    background-color: #FF1D531F !important;
+    color: #FF1D53 !important;
+    border: 1px solid !important;
+    border-radius: 100px;
+}
+
+.b-third {
+    background-color: #FF1D53 !important;
+    color: #FFFFFF !important;
+    border: 1px solid !important;
+    border-radius: 100px;
+}
+
+.b-black {
+    background-color: #000000 !important;
+    color: #ffffff !important;
+    border-radius: 100px;
+}
+
+.b-white-pink {
+    background-color: #FFFFFF !important;
+    color: #FF1D53 !important;
+    border: 1px solid #FF1D53 !important;
+    border-radius: 100px;
+}
+
 
 
