--- a/demo-courier/src/app/app.component.html
+++ b/demo-courier/src/app/app.component.html
@@ -19,7 +19,7 @@
                         <!--SUCURSAL-->
                         <div class="col-12 md:col-4 flex">
                             <span class="col-2 text-700">Sucursal</span>
-                            <input class="col" type="text" pInputText placeholder="Codigo + Descripcion">
+                            <input class="col" type="text" pInputText placeholder="Codigo + Descripcion" autofocus>
                         </div>
 
                         <!--PRODUCTO-->
@@ -62,11 +62,12 @@
                         <div class="col-12 md:col-2 flex">
                             <span class="col-3 text-700 md:pr-5">Destino</span>
                             <input class="col" type="text" pInputText placeholder="Codigo">
+                            <p-radioButton class="pl-1" name="groupname" value="val1"></p-radioButton>
                         </div>
 
                         <!--MANIFIESTO-->
                         <div class="col-12 md:col-1 flex-column">
-                            <span class="col-1 text-700">Manifiesto</span>
+                            <span class="col-3 text-700">Manifiesto</span>
                             <input class="col" type="text" pInputText placeholder="Codigo + Descripcion">
                         </div>
 
