--- a/demo-courier/src/app/app.component.html
+++ b/demo-courier/src/app/app.component.html
@@ -59,15 +59,15 @@
                         </div>
 
                         <!--DESTINO-->
-                        <div class="col-12 md:col-2 flex">
+                        <div class="col-12 md:col-2 flex relative position-input">
                             <span class="col-4 text-700 md:pr-5">Destino</span>
                             <input class="col" type="text" pInputText placeholder="Codigo">
                             <p-radioButton class="pl-1" name="groupname" value="val1"></p-radioButton>
                         </div>
 
                         <!--MANIFIESTO-->
-                        <div class="col-12 md:col-1 flex-column">
-                            <span class="col-3 text-700">Manifiesto</span>
+                        <div class="col-12 md:col-1 flex">
+                            <span class="col-3 text-700 relative position-manifiesto">Manifiesto</span>
                             <input class="col" type="text" pInputText placeholder="Codigo + Descripcion">
                         </div>
 
